--- a/commander/commander.csproj
+++ b/commander/commander.csproj
@@ -44,6 +44,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AboutBox1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AboutBox1.Designer.cs">
+      <DependentUpon>AboutBox1.cs</DependentUpon>
+    </Compile>
     <Compile Include="AddTabWindow.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -129,7 +135,9 @@
     </Compile>
     <Compile Include="Sorter1.cs" />
     <Compile Include="Sorter2.cs" />
+    <Compile Include="Sorter3.cs" />
     <Compile Include="Stuff.cs" />
+    <Compile Include="TagInfo.cs" />
     <Compile Include="TagListViewControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -148,6 +156,9 @@
     <Compile Include="TextSearchForm.Designer.cs">
       <DependentUpon>TextSearchForm.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="AboutBox1.resx">
+      <DependentUpon>AboutBox1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="AddTabWindow.resx">
       <DependentUpon>AddTabWindow.cs</DependentUpon>
     </EmbeddedResource>
@@ -220,7 +231,14 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <SubType>Designer</SubType>
     </Content>
+    <Content Include="todo.notpublish.txt" />
     <Content Include="todo.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PluginLib\PluginLib.csproj">
+      <Project>{90e6e142-c201-4918-9d48-6e0e041ea40d}</Project>
+      <Name>PluginLib</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
