--- a/commander/commander.csproj
+++ b/commander/commander.csproj
@@ -75,6 +75,12 @@
       <DependentUpon>ConsoleOutputWindow.cs</DependentUpon>
     </Compile>
     <Compile Include="DefaultIcons.cs" />
+    <Compile Include="Desktop.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Desktop.Designer.cs">
+      <DependentUpon>Desktop.cs</DependentUpon>
+    </Compile>
     <Compile Include="FileListControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
