--- a/GamesPack1Tester/GamesPack1Tester.csproj
+++ b/GamesPack1Tester/GamesPack1Tester.csproj
@@ -4,16 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{DD4EB311-46BE-472B-8D2A-98A5F2539869}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>GamesPack1</RootNamespace>
-    <AssemblyName>GamesPack1</AssemblyName>
+    <ProjectGuid>{82FF6303-5953-4712-99A0-B25B0C940516}</ProjectGuid>
+    <OutputType>WinExe</OutputType>
+    <RootNamespace>GamesPack1Tester</RootNamespace>
+    <AssemblyName>GamesPack1Tester</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,6 +23,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -33,44 +34,42 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Deployment" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GamePack1Plugin.cs" />
-    <Compile Include="Lines.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Lines.Designer.cs">
-      <DependentUpon>Lines.cs</DependentUpon>
-    </Compile>
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="PuzzleGame.cs">
-      <SubType>Form</SubType>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="PuzzleGame.Designer.cs">
-      <DependentUpon>PuzzleGame.cs</DependentUpon>
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Settings.settings</DependentUpon>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="PuzzleItem.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\PluginLib\PluginLib.csproj">
-      <Project>{90E6E142-C201-4918-9D48-6E0E041EA40D}</Project>
-      <Name>PluginLib</Name>
+    <ProjectReference Include="..\GamesPack1\GamesPack1.csproj">
+      <Project>{DD4EB311-46BE-472B-8D2A-98A5F2539869}</Project>
+      <Name>GamesPack1</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Lines.resx">
-      <DependentUpon>Lines.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="PuzzleGame.resx">
-      <DependentUpon>PuzzleGame.cs</DependentUpon>
-    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
