--- a/commander/commander.csproj
+++ b/commander/commander.csproj
@@ -106,8 +106,10 @@
       <DependentUpon>Explorer.cs</DependentUpon>
     </Compile>
     <Compile Include="FilesystemLibrary.cs" />
+    <Compile Include="HotkeyShortcutInfo.cs" />
     <Compile Include="IFileListControl.cs" />
     <Compile Include="IFilesystem.cs" />
+    <Compile Include="PreviewHelper.cs" />
     <Compile Include="QuickTagsWindow.cs">
       <SubType>Form</SubType>
     </Compile>
